src/terraform/modules/azurite/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage-azurite
  namespace: ${namespace}
spec:
  ports:
  - name: storage-azurite-blobs
    port: 10000
    targetPort: 10000
  - name: storage-azurite-queues
    port: 10001
    targetPort: 10001
  - name: storage-azurite-tables
    port: 10002
    targetPort: 10002
  selector:
    app: storage-azurite
